# libfoo

./: CMakeLists.txt  README.md
cmake/: config.cmake.in
include/foo/: foo-export.h  foo.h
src/: foo.cpp
